routeo con ullua

--- a/.htaccess
+++ b/.htaccess
@@ -10,8 +10,8 @@
     # ^ = url empieza on
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^catalogo/ catalogo.html [QSA,L]
-    RewriteRule ^bio/ bio.html [QSA,L]
+    RewriteRule ^fotos/ fotos.html [QSA,L]
+    RewriteRule ^info/ info.html [QSA,L]
 
     ErrorDocument 404 /404.html
 </ifModule>
