--- a/.htaccess
+++ b/.htaccess
@@ -4,14 +4,15 @@
     RewriteBase /
 
     # add trailing slash
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*[^/])$ $1/ [L,R=301]
+    # RewriteCond %{REQUEST_FILENAME} !-f
+    # RewriteRule ^(.*[^/])$ $1/ [L,R=301]
     
     # ^ = url empieza on
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^fotos/ fotos.html [QSA,L]
     RewriteRule ^info/ info.html [QSA,L]
+    RewriteRule ^foto/ fotos.html [QSA,L]
 
     ErrorDocument 404 /404.html
 </ifModule>
