--- a/.htaccess
+++ b/.htaccess
@@ -4,8 +4,8 @@
     RewriteBase /
 
     # add trailing slash
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*[^/])$ $1/ [L,R=301]
+    # RewriteCond %{REQUEST_FILENAME} !-f
+    # RewriteRule ^(.*[^/])$ $1/ [L,R=301]
     
     # ^ = url empieza on
     RewriteCond %{REQUEST_FILENAME} !-f
