--- a/.htaccess
+++ b/.htaccess
@@ -10,9 +10,9 @@
     # ^ = url empieza on
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^fotos/ fotos.html [QSA,L]
-    RewriteRule ^info/ info.html [QSA,L]
-    RewriteRule ^foto/ fotos.html [QSA,L]
+    RewriteRule ^fotos/? fotos.html [QSA,L]
+    RewriteRule ^info/? info.html [QSA,L]
+    RewriteRule ^foto/? fotos.html [QSA,L]
 
     ErrorDocument 404 /404.html
 </ifModule>
